--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>TI da morte.</h2>
+<h3>Nos somos a empresa de TI que mata seus problemas</h3>
 
 <p>Esta aplicação gerencia vestibulares.</p>
 
