--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>Ti da Morte.</h2>
+<h3>Nos somos a empresa de TI que mata seus problemas</h3>
 
 <address>
     Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Rua da Morte, 6666<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    (11) 96969-6969
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:morteti@problemas.com">Suporte@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@morteti.com">Marketing@example.com</a>
 </address>
 
 {% endblock %}
