--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -11,7 +11,13 @@
     <abbr title="Telefone">Tel:</abbr>
     91010-1010
 </address>
-
+<address>
+    Alexandre de Oliveira RA:1800632<br />
+    Lucas Nascimento de Oliveira RA: 1800048<br />
+    Marcelo Mithio Nakamura RA: 1800294<br />
+    Messias Natanael da Silva Martins RA: 1800256<br />
+    Nicolas Ferreira Santos RA: 1800345<br />
+</address>
 <address>
     <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
