--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,19 +2,26 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>TI da Morte.</h2>
+<h3>Somos a Empresa de TI que mata seus problemas</h3>
 
 <address>
     Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Rua da Morte, 666<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    (11) 96666-6969
+</address>
+<address>
+    Alexandre de Oliveira RA:1800632<br />
+    Lucas Nascimento de Oliveira RA: 1800048<br />
+    Marcelo Mithio Nakamura RA: 1800294<br />
+    Messias Natanael da Silva Martins RA: 1800256<br />
+    Nicolas Ferreira Santos RA: 1800345<br />
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">morteti@ti.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">morte@ti.com</a>
 </address>
 
 {% endblock %}
